src/snapshots/http_dragonfly__config__test__errors-2.snap
---
source: src/config.rs
expression: "ConfigError::ValidateConfig { cause: \"snapshot test cause\".to_string() }"
---
invalid config: snapshot test cause
