src/snapshots/http_dragonfly__config__test__errors.snap
---
source: src/config.rs
expression: "ConfigError::LoadConfig {\n    cause: io::Error::new(ErrorKind::Other, \"snapshot test cause\"),\n}"
---
unable to load config: snapshot test cause
