src/snapshots/http_dragonfly__config__test__good_config@02-config.yaml.snap
---
source: src/config.rs
expression: "AppConfig::owned(&String::from(path.to_str().unwrap()), &ctx)"
input_file: tests/configs/good/02-config.yaml
---
Ok(
    AppConfig {
        listeners: [
            ListenerConfig {
                name: Some(
                    "Listener-1",
                ),
                listen_on: ListenOn {
                    ip: 8.8.8.8,
                    port: 4321,
                },
                timeout: 30s,
                strategy: AlwaysOverride,
                headers: Some(
                    [
                        HeaderTransform {
                            action: Drop(
                                "*",
                            ),
                            value: None,
                        },
                        HeaderTransform {
                            action: Add(
                                "X-Added-Header",
                            ),
                            value: Some(
                                "something",
                            ),
                        },
                        HeaderTransform {
                            action: Update(
                                "Authorization",
                            ),
                            value: Some(
                                "${SOME_AUTH_TOKEN}",
                            ),
                        },
                        HeaderTransform {
                            action: Drop(
                                "X-Forwarded-For",
                            ),
                            value: None,
                        },
                    ],
                ),
                methods: Some(
                    {
                        Get,
                    },
                ),
                targets: [
                    TargetConfig {
                        id: Some(
                            "Target-0",
                        ),
                        url: "https://test-1.www.com/",
                        headers: None,
                        body: Some(
                            "{\"method\": \"${CTX_REQUEST_METHOD}\"}",
                        ),
                        timeout: 60s,
                        on_error: Status,
                        error_status: Some(
                            555,
                        ),
                        condition: None,
                    },
                    TargetConfig {
                        id: Some(
                            "Target-1",
                        ),
                        url: "https://test-2.www.com/some/path",
                        headers: None,
                        body: None,
                        timeout: 60s,
                        on_error: Propagate,
                        error_status: None,
                        condition: Some(
                            Filter(
                                ConditionFilter {
                                    filter: Owned(
                                        Id(
                                            5,
                                        ),
                                        [
                                            Id,
                                            ToString,
                                            Path(
                                                Id(
                                                    0,
                                                ),
                                                Path(
                                                    [
                                                        (
                                                            Range(
                                                                None,
                                                                None,
                                                            ),
                                                            Optional,
                                                        ),
                                                    ],
                                                ),
                                            ),
                                            Object(
                                                [],
                                            ),
                                            Path(
                                                Id(
                                                    3,
                                                ),
                                                Path(
                                                    [
                                                        (
                                                            Range(
                                                                None,
                                                                None,
                                                            ),
                                                            Essential,
                                                        ),
                                                    ],
                                                ),
                                            ),
                                            Ord(
                                                Id(
                                                    9,
                                                ),
                                                Eq,
                                                Id(
                                                    10,
                                                ),
                                            ),
                                            Id,
                                            Str(
                                                "body",
                                            ),
                                            Str(
                                                "target",
                                            ),
                                            Path(
                                                Id(
                                                    6,
                                                ),
                                                Path(
                                                    [
                                                        (
                                                            Index(
                                                                Id(
                                                                    7,
                                                                ),
                                                            ),
                                                            Essential,
                                                        ),
                                                        (
                                                            Index(
                                                                Id(
                                                                    8,
                                                                ),
                                                            ),
                                                            Essential,
                                                        ),
                                                    ],
                                                ),
                                            ),
                                            Str(
                                                "1",
                                            ),
                                        ],
                                    ),
                                },
                            ),
                        ),
                    },
                    TargetConfig {
                        id: Some(
                            "Target-2",
                        ),
                        url: "https://test-3.www.com/?${CTX_REQUEST_QUERY}",
                        headers: Some(
                            [
                                HeaderTransform {
                                    action: Update(
                                        "Authorization",
                                    ),
                                    value: Some(
                                        "${TARGET_2_AUTH_TOKEN}",
                                    ),
                                },
                                HeaderTransform {
                                    action: Drop(
                                        "X-Added-Header",
                                    ),
                                    value: None,
                                },
                            ],
                        ),
                        body: None,
                        timeout: 60s,
                        on_error: Propagate,
                        error_status: None,
                        condition: None,
                    },
                ],
                response: ResponseConfig {
                    target_selector: Some(
                        "Target-0",
                    ),
                    failed_status_regex: "4\\d{2}|500",
                    no_targets_status: 599,
                    override_config: Some(
                        OverrideConfig {
                            status: Some(
                                200,
                            ),
                            body: Some(
                                "{\"status\": \"ok\"}\n",
                            ),
                            headers: Some(
                                [
                                    HeaderTransform {
                                        action: Update(
                                            "content-type",
                                        ),
                                        value: Some(
                                            "application/json",
                                        ),
                                    },
                                    HeaderTransform {
                                        action: Add(
                                            "X-Http-Splitter-Version",
                                        ),
                                        value: Some(
                                            "0.1.0",
                                        ),
                                    },
                                    HeaderTransform {
                                        action: Add(
                                            "X-Http-Splitter-Response-Source",
                                        ),
                                        value: Some(
                                            "${CTX_TARGET_ID}",
                                        ),
                                    },
                                ],
                            ),
                        },
                    ),
                },
            },
        ],
    },
)
