src/snapshots/http_dragonfly__config__test__good_config@70-strategy-failed_then_target_id.yaml.snap
---
source: src/config.rs
expression: "AppConfig::from_file(&String::from(path.to_str().unwrap()), ctx)"
input_file: tests/configs/good/70-strategy-failed_then_target_id.yaml
---
Ok(
    AppConfig {
        listeners: [
            ListenerConfig {
                id: None,
                listen_on: ListenOn {
                    ip: 0.0.0.0,
                    port: 8080,
                },
                timeout: 10s,
                strategy: FailedThenTargetId,
                headers: None,
                methods: None,
                targets: [
                    TargetConfig {
                        id: Some(
                            "google-1",
                        ),
                        url: "https://www.google.com/",
                        headers: None,
                        body: None,
                        timeout: 60s,
                        on_error: Propagate,
                        error_status: None,
                        condition: None,
                        tls: None,
                        aws_sigv4: None,
                    },
                ],
                log_target_status: false,
                response: ResponseConfig {
                    target_selector: Some(
                        "google-1",
                    ),
                    failed_status_regex: "4\\d{2}|5\\d{2}",
                    no_targets_status: 500,
                    override_config: None,
                },
                tls: TlsConfig {
                    verify: Yes,
                    ca: None,
                },
            },
        ],
    },
)
